# reqbug

./: Cargo.toml  build_nvim  nvimlog_crash.txt  nvimlog_nocrash.txt  prog.sh  runit.sh
src/: main.rs
