[package]
name = "reqbug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-rs =  { version = "*", features = ["use_tokio"] }
async-trait = "*"
rmpv = "*"
tokio = "*"

[[bin]]
name = "reqbug"
path = "src/bin/reqbug.rs"

[[bin]]
name = "eave"
path = "src/bin/eave.rs"
